fix model group rendering